syntax = "proto3";

package proto;

message GetRequest {
  string key = 1;
}
message GetResponse {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}
message SetResponse {}

message DeleteRequest {
  string key = 1;
}
message DeleteResponse {}

message ListRequest{}
message ListResponse{
  map<string, string> store = 1;
}

service Kvs {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
}
